--- a/src/main/resources/templates/blocks/footer.html
+++ b/src/main/resources/templates/blocks/footer.html
@@ -45,4 +45,7 @@
         </div>
     </div>
 </footer>
+    <section class="jumbotron text-center" >
+        <h5>Webportal-App v2.0</h5>
+    </section>
 </div>
