--- a/src/main/resources/templates/clients.html
+++ b/src/main/resources/templates/clients.html
@@ -8,10 +8,10 @@
 <body>
 
 <header th:insert="blocks/header :: header"></header>
-
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <main role="main">
 
-    <section class="jumbotron text-center">
+    <section id="formAdd" class="jumbotron text-center">
         <div class="container">
             <form th:action="@{/clients/add}" method="post">
                 <input type="text" name="clientName" placeholder="Имя клиента" required class="form-control"><br>
@@ -24,7 +24,11 @@
             </form>
         </div>
     </section>
-
+    <div class="container d-flex align-items-center justify-content-center margin-bottom-20">
+        <br>
+        <button id="show" class="btn btn-primary">Новый Клиент</button>
+        <br>
+    </div>
 
     <section class="jumbotron text-center">
         <div class="container">
@@ -78,6 +82,22 @@
         }
     }
 </script>
+<script>
+    $(document).ready(function(){
+        var show = false;
+        $("#formAdd").hide();
+        $("#show").click(function(){
+            if(show==false) {
+                $("#formAdd").show();
+                show = true;
+            }
+            else {
+                $("#formAdd").hide();
+                show = false;
+            }
 
+        });
+    });
+</script>
 </body>
 </html>
