--- a/src/main/resources/templates/orders.html
+++ b/src/main/resources/templates/orders.html
@@ -8,10 +8,10 @@
 <body>
 
 <header th:insert="blocks/header :: header"></header>
-
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <main role="main">
 
-    <section class="jumbotron text-center">
+    <section id="formAdd" class="jumbotron text-center">
         <div class="container">
             <form th:action="@{/orders/add}" method="post">
                 <input class="form-control" onchange="onClient()" list="clients" name="clientId" required id="client" placeholder="ФИО Клиента"><br>
@@ -38,6 +38,11 @@
             </form>
         </div>
     </section>
+    <div class="container d-flex align-items-center justify-content-center margin-bottom-20">
+        <br>
+        <button id="show" class="btn btn-primary">Новый заказ</button>
+        <br>
+    </div>
 
     <!--<section class="jumbotron text-center">/
         <div class="container">
@@ -70,6 +75,7 @@
                     <tr>
                         <th scope="col">#</th>
                         <th scope="col">First Name</th>
+                        <th scope="col">Устройство</th>
                         <th scope="col">Phone Number</th>
                         <th scope="col">Status</th>
                     </tr>
@@ -79,8 +85,10 @@
 <!--                        <th scope="row" th:text="${el.id}"/>-->
                         <th><a th:text="${el.id}" th:href="@{/orders/}+${el.id}"/></th>
                         <td th:if="${el.client==null}" th:text="${el.name}"/>
-                        <td th:if="${el.client==null}" th:text="${el.number}"/>
                         <th th:if="${el.client!=null}"><a th:text='${el.client.clientSurname+" "+el.client.clientName}' th:href="@{/clients/}+${el.client.id}"/></th>
+                        <td th:text="${el.type.name}"/>
+
+                        <td th:if="${el.client==null}" th:text="${el.number}"/>
                         <td th:if="${el.client!=null}" th:text="${el.client.phoneNumber}"/>
                         <td style="color: white" th:if='${el.status.toString().equals("NOTDONE")}'>Не Сделано</td>
                         <td style="color: yellow" th:if='${el.status.toString().equals("DONE")}'>Сделано</td>
@@ -120,6 +128,22 @@
         }
     }
 </script>
+<script>
+    $(document).ready(function(){
+        var show = false;
+        $("#formAdd").hide();
+        $("#show").click(function(){
+            if(show==false) {
+                $("#formAdd").show();
+                show = true;
+            }
+            else {
+                $("#formAdd").hide();
+                show = false;
+            }
 
+        });
+    });
+</script>
 </body>
 </html>
