--- a/src/main/resources/templates/products.html
+++ b/src/main/resources/templates/products.html
@@ -8,10 +8,10 @@
 <body>
 
 <header th:insert="blocks/header :: header"></header>
-
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <main role="main">
 
-    <section class="jumbotron text-center">
+    <section id="formAdd" class="jumbotron text-center">
         <div class="container">
             <form th:action="@{/products/add}" method="post">
                 <input type="text" name="product_name" placeholder="Имя Товара" required class="form-control"><br>
@@ -21,7 +21,11 @@
             </form>
         </div>
     </section>
-
+    <div class="container d-flex align-items-center justify-content-center margin-bottom-20">
+        <br>
+        <button id="show" class="btn btn-primary">Новый товар</button>
+        <br>
+    </div>
     <section class="jumbotron text-center">
         <div class="container">
             <input list="products" class="form-control" name="product" onchange="onInput()" id="product" placeholder="Choose Product">
@@ -76,6 +80,23 @@
             }
         }
     }
+</script>
+<script>
+    $(document).ready(function(){
+        var show = false;
+        $("#formAdd").hide();
+        $("#show").click(function(){
+            if(show==false) {
+                $("#formAdd").show();
+                show = true;
+            }
+            else {
+                $("#formAdd").hide();
+                show = false;
+            }
+
+        });
+    });
 </script>
 </body>
 </html>
