--- a/src/main/resources/templates/providers.html
+++ b/src/main/resources/templates/providers.html
@@ -8,10 +8,10 @@
 <body>
 
 <header th:insert="blocks/header :: header"></header>
-
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <main role="main">
 
-    <section class="jumbotron text-center">
+    <section id="formAdd" class="jumbotron text-center">
         <div class="container">
             <h1>Добавить провайдера</h1>
             <form th:action="@{/providers/add}" method="post">
@@ -22,7 +22,11 @@
             </form>
         </div>
     </section>
-
+    <div class="container d-flex align-items-center justify-content-center margin-bottom-20">
+        <br>
+        <button id="show" class="btn btn-primary">Новый поставщик</button>
+        <br>
+    </div>
     <div class="container">
 
         <div class="row">
@@ -52,5 +56,22 @@
 
 </main>
 <footer th:insert="blocks/footer::footer"></footer>
+<script>
+    $(document).ready(function(){
+        var show = false;
+        $("#formAdd").hide();
+        $("#show").click(function(){
+            if(show==false) {
+                $("#formAdd").show();
+                show = true;
+            }
+            else {
+                $("#formAdd").hide();
+                show = false;
+            }
+
+        });
+    });
+</script>
 </body>
 </html>
