--- a/src/main/resources/templates/types.html
+++ b/src/main/resources/templates/types.html
@@ -8,10 +8,10 @@
 <body>
 
 <header th:insert="blocks/header :: header"></header>
-
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <main role="main">
 
-    <section class="jumbotron text-center">
+    <section id="formAdd" class="jumbotron text-center">
         <div class="container">
             <form th:action="@{/types/add}" method="post">
                 <input type="text" name="type_name" placeholder="Тип устройства" required class="form-control"><br>
@@ -19,7 +19,11 @@
             </form>
         </div>
     </section>
-
+    <div class="container d-flex align-items-center justify-content-center margin-bottom-20">
+        <br>
+        <button id="show" class="btn btn-primary">Добавить Устройство</button>
+        <br>
+    </div>
     <div class="container">
         <div class="row">
             <table class="table table-hover table-dark">
@@ -42,5 +46,22 @@
 
 </main>
 <footer th:insert="blocks/footer::footer"></footer>
+<script>
+    $(document).ready(function(){
+        var show = false;
+        $("#formAdd").hide();
+        $("#show").click(function(){
+            if(show==false) {
+                $("#formAdd").show();
+                show = true;
+            }
+            else {
+                $("#formAdd").hide();
+                show = false;
+            }
+
+        });
+    });
+</script>
 </body>
 </html>
