--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -8,10 +8,10 @@
 <body>
 
 <header th:insert="blocks/header :: header"></header>
-
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <main role="main">
 
-    <section class="jumbotron text-center">
+    <section id="formAdd" class="jumbotron text-center">
         <div class="container">
             <form th:action="@{users/add}" method="post">
                 <input type="text" class="form-control" placeholder="Логин" required name="username"/><br>
@@ -23,6 +23,11 @@
             </form>
         </div>
     </section>
+    <div class="container d-flex align-items-center justify-content-center margin-bottom-20">
+        <br>
+        <button id="show" class="btn btn-primary">Добавить Пользователя</button>
+        <br>
+    </div>
 
     <div class="container">
 
@@ -52,5 +57,22 @@
     </div>
 </main>
 <footer th:insert="blocks/footer::footer"></footer>
+<script>
+    $(document).ready(function(){
+        var show = false;
+        $("#formAdd").hide();
+        $("#show").click(function(){
+            if(show==false) {
+                $("#formAdd").show();
+                show = true;
+            }
+            else {
+                $("#formAdd").hide();
+                show = false;
+            }
+
+        });
+    });
+</script>
 </body>
 </html>
