--- a/src/main/resources/templates/order-info.html
+++ b/src/main/resources/templates/order-info.html
@@ -74,6 +74,7 @@
         <h3  th:if='${orderOne.typesOfPayments!=null&&orderOne.typesOfPayments.toString().equals("cash")}' th:text='${"Способ Оплаты: Наличными"}'/>
         <h3 th:if='${orderOne.typesOfPayments!=null&&orderOne.typesOfPayments.toString().equals("contract")}' th:text='${"Способ Оплаты: Договор"}'/>
         <h3 th:if='${orderOne.typesOfPayments!=null&&orderOne.typesOfPayments.toString().equals("online")}' th:text='${"Способ Оплаты: Онлайн перевод"}'/>
+        <h3 th:if='${orderOne.typesOfPayments!=null&&orderOne.typesOfPayments.toString().equals("adverb")}' th:text='${"Способ Оплаты: Долг"}'/>
         <a th:if='${!orderOne.status.toString().equals("GIVEN")}' th:href="@{/orders/}+${orderOne.id}+@{/update}"><button type="button" class="btn btn-primary">Добавить Услугу</button></a>
         <a th:if='${!orderOne.status.toString().equals("GIVEN")}' th:href="@{/orders/}+${orderOne.id}+@{/add/product}"><button type="button" class="btn btn-primary">Добавить Товар</button></a>
         <a th:if='${orderOne.status.toString().equals("NOTDONE")}' th:href="@{/orders/}+${orderOne.id}+@{/done}"><button type="button" class="btn btn-warning">Исполнено</button></a>
@@ -82,17 +83,17 @@
         <a  th:if='${!orderOne.status.toString().equals("GIVEN")&&orderOne.comment==null}' th:href="@{/orders/}+${orderOne.id}+@{/comment}"><button type="button" class="btn btn-success">Добавить Комментарии</button></a>
         <a  th:if='${orderOne.comment!=null&&!orderOne.status.toString().equals("GIVEN")}' th:href="@{/orders/}+${orderOne.id}+@{/comment/update}"><button type="button" class="btn btn-primary">Изменить Комментарии</button></a>
         <a sec:authorize="hasAuthority('ADMIN')" th:href="@{/orders}+@{/update/}+${orderOne.id}"><button type="button" class="btn btn-primary">Изменить</button></a>
-        <a sec:authorize="hasAuthority('ADMIN')" th:href="@{/orders/}+${orderOne.id}+@{/remove}"><button type="button" class="btn btn-danger">Удалить</button></a>
+        <a sec:authorize="hasAuthority('MODERATOR')" th:href="@{/orders/}+${orderOne.id}+@{/remove}"><button type="button" class="btn btn-danger">Удалить</button></a>
         <a th:href="@{/orders/}+${orderOne.id}+@{/QRCode}"><button type="button" class="btn btn-primary">QRCode</button></a>
         <br>
         <div class="w-100">&nbsp;</div>
-        <select th:if='${orderOne.status.toString().equals("GIVEN")&&orderOne.typesOfPayments==null}' class="form-control" id="type"   name="payment">
+        <!--<select th:if='${orderOne.status.toString().equals("GIVEN")&&orderOne.typesOfPayments==null}' class="form-control" id="type"   name="payment">
             <option th:value='${"/orders/"+orderOne.id+"/payment/cash"}'>Наличными</option>
             <option th:value='${"/orders/"+orderOne.id+"/payment/contract"}'>По Договору</option>
             <option th:value='${"/orders/"+orderOne.id+"/payment/online"}'>Перевод</option>
         </select>
         <br>
-        <button th:if='${orderOne.status.toString().equals("GIVEN")&&orderOne.typesOfPayments==null}' onclick="onInput()" type="button" class="btn btn-primary w-100">Выбрать</button>
+        <button th:if='${orderOne.status.toString().equals("GIVEN")&&orderOne.typesOfPayments==null}' onclick="onInput()" type="button" class="btn btn-primary w-100">Выбрать</button>-->
     </div>
     <div th:if="${order.size()==0}" class="jumbotron">
         <h1>Не найдено</h1>
