--- a/src/main/resources/templates/blocks/header.html
+++ b/src/main/resources/templates/blocks/header.html
@@ -2,6 +2,7 @@
 <div th:fragment="header">
 <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm">
     <h5 class="my-0 mr-md-auto font-weight-normal">WebPortal</h5>
+    <h5 sec:authorize="isAuthenticated()" class="my-0 mr-md-auto font-weight-normal" th:text="${#authentication.principal.fname}"/>
     <nav class="my-2 my-md-0 mr-md-3">
         <a class="p-2 text-dark" href="/login">Login</a>
         <a sec:authorize="hasAuthority('USER')" class="p-2 text-dark" href="/orders">Заказы</a>
@@ -19,9 +20,9 @@
         <a sec:authorize="hasAuthority('CASHIER')" class="p-2 text-dark" href="/orders/adverb">Долг</a>
     </nav>
     <div sec:authorize="isAuthenticated()">
-    <form th:action="@{/logout}" method="post">
-        <input type="submit" class="btn btn-danger" value="Выйти"/>
-    </form>
+        <form th:action="@{/logout}" method="post">
+            <input type="submit" class="btn btn-danger" value="Выйти"/>
+        </form>
     </div>
 </div>
 </div>
